# yaml2bklg-issue-func

./: .funcignore  README.md  pyproject.toml  requirements.txt
azfunc/: __init__.py
data/: fuga.yaml
tests/: test_azfunc.py
yaml2bklg/: core.py
